<resources>
    <string name="app_name">UniHospital</string>
    <string name="about">About</string>
    <string name="learn">Learn</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="events">Events</string>
    <string name="activities">Activities</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_message_phone">Enter Phone No</string>
    <string name="error_invalid_phone_no">This Phone No Is Invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="email_id">Email-Id</string>
    <string name="enter_your_email_id">Enter Your Email_Id</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="username">Username</string>
    <string name="signup">SignUp</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to_unihospital">Welcome to UniHospital</string>
    <string name="home_doctor">Home Doctor</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <item name="logo" type="drawable"/>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="phone">Phone</string>
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>

</resources>

